# ac3-ws-c4-jinja2-in-action

./: .gitignore  README.md  check_repo_env.py  main.py  pyproject.toml  setup.py
00_DataStructure_Woodchipper/: README.md  data_woodchipper.py
01_CurrentStateReport/: README.md  gen_bgp_report.py
02_Procedure/: Installation_details_S2000.yml  Installation_details_S600.yml  Installation_details_template.yml  README.md  gen_procedure.py  infrahub_flattened_output.yml  scaffolded_gen_procedure.py
03_ConfigurationsMonolithic/: README.md  gen_monolithic_sw_cfg.py  gen_monolithic_sw_cfg_scaffold.py
04_ChangeRequest/: gen_new_vlan_cr.py
04_ConfigurationsModular/: README.md
05_ChangeRequest/: README.md  gen_new_vlan_cr.py  new_vlans_all.csv
05_ClabTopology/: gdl_campus.clab.yml  gen_clab_topo.py
06_ClabTopology/: README.md  gen_clab_topo.py
06_VerificationReport/: README.md  stp_response_from_suzieq.json
07_SoW/: README.md  gen_sow.py
07_VerificationReport/: README.md  stp_verification_app.py
08_SoW/: GDL_NewAPs.yaml  (+6 more)
09_EmbeddedJ2/Ansible/: README.md  ansible.cfg  main.py  pyproject.toml
09_EmbeddedJ2/Ansible/configs/: prg-cor01_cfg.txt  prg-cor02_cfg.txt
09_EmbeddedJ2/Ansible/inventory/: hosts
09_EmbeddedJ2/Ansible/inventory/group_vars/: switches.yml
09_EmbeddedJ2/Ansible/inventory/host_vars/: prg-cor01.yml  prg-cor02.yml
09_EmbeddedJ2/Ansible/playbooks/: generate-configs.yml
09_EmbeddedJ2/Ansible/templates/: base.j2
09_EmbeddedJ2/Ansible/templates/includes/: aaa.j2  api.j2  domain.j2  interfaces.j2  mlag.j2  ntp.j2  ospf.j2  ssh.j2
(+33 files in other folders)
