[project]
name = "ac3-templating-workshop"
version = "0.1.0"
description = "NAF AutoCon3 Prague, Czech Republic - WS:C4 - Jinja2 in Action"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diagrams>=0.24.4",
    "jinja2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "solara>=1.47.0",
]
