[project]
name = "my-ansible-project"
version = "0.1.0"
description = "Ansible automation project managed with uv"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
  "ansible>=9.0",
  "jmespath>=1.0.1",
  "netaddr>=1.1.0",
  "passlib>=1.7.4",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "molecule>=6.0",
  "molecule-plugins[docker]>=23.3.0"
]

